Added top margin to stories

--- a/content/stories/story1.html
+++ b/content/stories/story1.html
@@ -6,7 +6,7 @@ tags:
   - none
 ---
 <div class="bs-docs-featurette">
-    <div class="row">
+    <div class="row story">
       <div class="col-md-6">
         <h4>
             Sadly, Jason's story isn't unique. Each year in this country roughly 164 million hours of work are lost to absence and decreased productivity associated with intense and untreated dental disease.</h4></br>
