--- a/content/stories/story3.html
+++ b/content/stories/story3.html
@@ -6,7 +6,7 @@ tags:
   - none
 ---
 <div class="bs-docs-featurette">
-    <div class="row">
+    <div class="row story">
         <div class="col-md-6">
             <h4>This summer, we received a call from a woman at a corporate dental chain who asked if we could see a patient who needed twelve extractions. The worker told us Monica's insurance only covered three and that the corporate supervisors would not provide any additional care without compensation.</h4></br>
             <h4>Normally, a patient with insurance would not qualify, yet Monica was in such pain that she was unable to eat. The resulting malnutrition prevented her from reaching the healthy weight level she needed in order to proceed with treatment for multiple sclerosis. An executive decision was made and Monica was treated immediately.</h4></br>
