Worked why_oral page

--- a/content/stories/story1.html
+++ b/content/stories/story1.html
@@ -8,8 +8,7 @@ tags:
 <div class="bs-docs-featurette">
     <div class="row story">
       <div class="col-md-6">
-        <h4>
-            Sadly, Jason's story isn't unique. Each year in this country roughly 164 million hours of work are lost to absence and decreased productivity associated with intense and untreated dental disease.</h4></br>
+        <h4 class="story">Sadly, Jason's story isn't unique. Each year in this country roughly 164 million hours of work are lost to absence and decreased productivity associated with intense and untreated dental disease.</h4></br>
         <h4>Three times as many adults in this country lack dental insurance as medical insurance and with such a large number of these adults working low wage jobs, many are not afforded the opportunity to see a dentist because of lack of money and/or time.</h4></br>
         <h4>This is why the work SACDC does, matters. We help people like Jason get the help they need so they spend less time thinking about pain and more providing for their families.</h4></br>
           <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
