--- a/content/stories/story3.html
+++ b/content/stories/story3.html
@@ -8,7 +8,7 @@ tags:
 <div class="bs-docs-featurette">
     <div class="row story">
       <div class="col-md-6">
-        <h4>This summer, we received a call from a woman at a corporate dental chain who asked if we could see a patient who needed twelve extractions. The worker told us Monica's insurance only covered three and that the corporate supervisors would not provide any additional care without compensation.</h4></br>
+        <h4 class="story">This summer, we received a call from a woman at a corporate dental chain who asked if we could see a patient who needed twelve extractions. The worker told us Monica's insurance only covered three and that the corporate supervisors would not provide any additional care without compensation.</h4></br>
         <h4>Normally, a patient with insurance would not qualify, yet Monica was in such pain that she was unable to eat. The resulting malnutrition prevented her from reaching the healthy weight level she needed in order to proceed with treatment for multiple sclerosis. An executive decision was made and Monica was treated immediately.</h4></br>
         <h4>Our staff juggled to squeeze in an appointment. Our dentist came in on an "off" day just to see Monica and our volunteers processed her paperwork even as she was in triage. Thanks to the commitment and dedication of our volunteers and workers, we were able to provide Monica with the care she needed.</h4></br>
         <h4>In June, Monica sent us a lovely thank you note, joined our prayer circle, and blessed us all. She then made a personal donation that we are certain was excessive for her situation. Monica told us that the gift was the result of a calling from Christ.</h4></br>
