--- a/content/why_oral.html
+++ b/content/why_oral.html
@@ -7,62 +7,62 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <h2 class="bs-docs-featurette-title">We often get asked why we work to meet dental needs. Below are some the reasons we do what we do.</h2>
+  <h3 class="story">We often get asked why we work to meet dental needs. Below are some of the reasons we do what we do.</h3><br>
     
   Space holder for picture from John
   <h2 class="bs-docs-featurette-title">Why oral care?</h2>
     
-  <div class="row">
-    <div class="col-md-6">
-      <h3>Health and Employability</h3></br>
+  <div class="row ltrtpadding">
+    <div class="col-md-8">
+      <h3 class="story">Health and Employability:</h3></br>
       <h4>The fact is that while dental disease is easily treated and prevented, poor dental health has the potential to threaten nutrition, speech, and general health.  Visible decay can erode self-confidence, personal interactions, and have a huge effect on employability.</h4>
     </div>
     <br>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral1_480.png" alt="A" width="480px">
     </div>
   </div>
   <hr class="half-rule">
-  <div class="row">
+  <div class="row ltrtpadding">
     <div class="col-md-6">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral2_480.png" alt="A" width="480px">
     </div>
-    <br>
+    <!--<br>-->
     <div class="col-md-6">
-      <h3>Coverage:</h3></br>
+      <h3 class="story">Coverage:</h3></br>
       <h4>Across the country, an estimated 130 million Americans lack dental insurance.  Challenges, including the high cost of dental insurance and a lack of low-cost dental services, affect low-income families and Hispanics disproportionately.</h4>
     </div>
   </div>
   <hr class="half-rule">
-  <div class="row">
+  <div class="row ltrtpadding">
     <div class="col-md-6">
-      <h3>Access:</h3></br>
+      <h3 class="story">Access:</h3></br>
       <h4>Locally, the 2013 Bexar County Community Health Assessment reported that only 47% of Bexar County residents with less than a high school degree and 44% of those with household incomes less than $25,000 reported a dental visit in the past year and only 41% of the county overall. In fact, 1/5th of Bexar County Adults say they haven’t received oral care in five years!<br>As a state, Texas has one of the lowest dentist to population ratios in the country, with a state average of 35 dentists for every 100,000 residents.  This is roughly half the national average and is exacerbated by the fact that “dental deserts” often exist in the urban core of major cities like San Antonio.</h4>
     </div>
     <br>
     <div class="col-md-6">
-      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral3_480.png" alt="A" width="480px">
+        <a href="/static/imgs/pic-content/why_oral3.png" target="_blank"><img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral3_480.png" alt="A" width="480px"></a>
     </div>
   </div>
   <hr class="half-rule">
-  <div class="row">
-    <div class="col-md-6">
+  <div class="row ltrtpadding">
+    <div class="col-md-4">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral4.png" alt="A" width="480px">
     </div>
-    <br>
-    <div class="col-md-6">
-      <h3>Need:</h3></br>
+    <!--<br>-->
+    <div class="col-md-8">
+      <h3 class="story">Need:</h3></br>
         <h4>Dental care was cited as THE HIGHEST NEED  by San Antonio’s homeless in the 2014 Point in Time annual survey and statewide, only 1/7 of those who needed dental care, received it. Compare this with Medical care in which the disparity between need and access is roughly ½.</h4>
     </div>
   </div>
   <hr class="half-rule">
-  <div class="row">
-    <div class="col-md-6">
-      <h3>Financial Burden:</h3></br>
+  <div class="row ltrtpadding">
+    <div class="col-md-7">
+      <h3 class="story">Financial Burden:</h3></br>
       <h4>In addition to health concerns, untreated oral health leads to personal and societal economic burdens.  From minor signs of decay to missing teeth, dental decay has huge potential for preventing seeking and/or maintaining meaningful work.  The Kaiser Foundation reports that about 1 in 4 non-elderly adults have untreated tooth decay, and the Surgeon General reports an estimated 164 million collective work hours are lost each year due to preventable dental disease.<br>To compound the problem, dental care is most effective and least costly when routine and performed at a clinic. With such a dearth in care, many adults turn to hospital emergency rooms to treat pain, yet the dental issue causing the problem often remains unaddressed.  Repeated ER visits follow and community support systems are unnecessarily accessed, resulting in high costs to patients, hospitals, and ultimately to taxpayers.</h4>
     </div>
     <br>
-    <div class="col-md-6">
+    <div class="col-md-5">
       <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral5_480.png" alt="A" width="480px">
     </div>
   </div>
