--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -3,97 +3,180 @@ title: Donations
 group: Get Involved
 precedence: 1
 tags:
-  - service 
+- service
 ---
 
+<script type="text/javascript" src="/static/scripts/vancoServices.js" defer></script>
 <div class="bs-docs-featurette border1">
-    <h2 class="bs-docs-featurette-title">Help our Mission by Making a Monetary Donation</h2>
-    <p class="lead">As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
-
-    <hr class="half-rule">
-
-    <form class="form" role="form" id="amount-form" method="post">
-      <div class="form-group">
-        <label class="">Amount</label>
-        <input type="text" name="amount" id="amount"> <!-- Type=CC -->
-      </div>
-      <div class="form-group">
-        <label class="">Recurrence:</label>
-        <label class="">One-time</label>
-        <input type="radio" value="O" name="frequency" id="freq">
-        <label class="">Monthly</label>
-        <input type="radio" value="M" name="frequency" id="freq">
-        <label class="">Weekly</label>
-        <input type="radio" value="W" name="frequency" id="freq">
-        <label class="">Bi-Weekly</label>
-        <input type="radio" value="BW" name="frequency" id="freq">
-        <label class="">Quarterly</label>
-        <input type="radio" value="Q" name="frequency" id="freq">
-        <label class="">Annual</label>
-        <input type="radio" value="A" name="frequency" id="freq">
-      </div>
-    </form>
-
-    <form class="form" role="form" id="type-form" method="post">
-    <div class="row">
-      <div class="form-group col-xs-offset-3 col-xs-2">
-        <label class="control-label">Credit or Debit Card</label>
-        <input type="radio" value="CC" name="accounttype" id="payment">
-      </div>
-      <div class="form-group col-xs-2">
-        <label class="control-label">Checking</label>
-        <input type="radio" value="C" name="accounttype" id="payment">
-      </div>
-      <div class="form-group col-xs-2">
-        <label class="control-label">Savings</label>
-        <input type="radio" value="S" name="accounttype" id="payment">
-      </div>
+  <h3 class="bs-docs-featurette-title">
+    Help our Mission by Making a Monetary Donation
+  </h3>
+  <!-- <p class="lead"> -->
+  <!-- As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need. -->
+  <!-- </p> -->
 </div>
+
+<div class="row text-center">
+  <div class="col-lg-8 col-lg-offset-2  col-md-8 col-md-offset-2 well" id="transaction-central">
+    <div class="row">
+      <div class="col-xs-3" id="tx-one" style="font-size:2em;">1</div>
+      <div class="col-xs-3" id="tx-two">2</div>
+      <div class="col-xs-3" id="tx-three">3</div>
+      <div class="col-xs-3" id="tx-four">4</div>
+    </div>
+
+    <div class="text-center" id="transaction-amount-block" style="display:none;">
+      <form class="form" role="form" id="amount-form" method="post">
+        <fieldset>
+          <h3>Tell us how to use your donation (choose one)</h3>
+          <ul class="bucket">
+            <li>
+            <h4>
+              <input type="radio" min=0 max=100 value='0' name="dist">
+              Operational Support
+            </h4>
+            <p>Helps cover administrative costs associated with scheduling
+            patients, adertising, and records.</p>
+            </li>
+            <li>
+            <h4>
+              <input type="radio" min=0 max=100 value='0' name="dist">
+              Patient Care
+            </h4>
+            <p>Applied to patient treatment, medical supplies, and minimal
+            staffing.</p>
+            </li>
+            <li>
+            <h4>
+              <input type="radio" min=0 max=100 value='100' name="dist" checked>
+              Discretionary
+            </h4>
+            <p>Empowers us to spend your donation where it is most needed to
+            sustain the mission --endowment...</p>
+            </li>
+          </ul>
+          <h3> Select an amount to donate. </h3>
+          <ol>
+            <li class="donation"><button type="submit"
+              value="10">$10</button></li>
+            <li class="donation"><button type="submit"
+              value="25">$25</button></li>
+            <li class="donation"><button type="submit"
+              value="100">$100</button></li>
+            <li class="donation"><button type="submit"
+              value="1000">$1K</button></li>
+            <li class="donation"><button type="submit"
+              value="2500">$2.5K</button></li>
+            <li class="donation"><button type="submit"
+              value="10000">$10K</button></li>
+            <li class="donation"><button type="submit"
+              value="1000000">$1M</button></li>
+            <li class="donation"><input type="text" name="enteredAmount"
+            placeholder="Custom"></li>
+          </ol>
+          <button class="btn btn-default" type="submit" id="customAmt" value="custom">Next</button>
+        </fieldset>
+      </form>
+    </div>
+
+    <div id="transaction-who-block">
+      <form class="form row" role="form" id="who-form" method="post">
+        <fieldset>
+          <legend>Billing Information ($<span class="amount"></span>)</legend>
+          <ol>
+            <li class="first">
+            <label for="billing-first">First Name</label>
+            <input id="billing-first" type="text" name="first" value="Matthew">
+            </li>
+            <li class="last">
+            <label for="billing-last">Last Name</label>
+            <input id="billing-last" type="text" name="last" value="Doe">
+            </li>
+            <li>
+            <label for="billing-addr1">Address Line 1</label>
+            <input id="billing-addr1" type="text" name="addr1" value="1 Heart Way">
+            </li>
+            <li>
+            <label for="billing-addr2">Address Line 2</label>
+            <input id="billing-addr2" type="text" name="addr2">
+            </li>
+            <li>
+            <label for="billing-city">City</label>
+            <input id="billing-city" type="text" name="city" value="Galveston">
+            </li>
+            <li class="state">
+            <label for="billing-state">State</label>
+            <input id="billing-state" type="text" name="state" size="2" value="TX">
+            </li>
+            <li class="zip">
+            <label for="billing-zip">Zip</label>
+            <input id="billing-zip" type="text" name="zip"
+            size="10" value="20740">
+            </li>
+            <li>
+            <label for="billing-phone">Phone Number</label>
+            <input id="billing-phone" type="text" name="phone" size="14" value="555-555-5555">
+            </li>
+            <li>
+            <label for="billing-email">Email Address</label>
+            <input id="billing-email" type="text" name="email" value="m@m.com">
+            </li>
+          </ol>
+          <button type="submit">Next</button>
+        </fieldset>
+      </form>
+    </div>
+
+    <form class="form row" role="form" style="display:none;" id="type-form" method="post">
+      <div class="row col-xs-6">
+        <div class="form-group col-xs-4">
+          <label class="control-label">Credit/Debit Card</label>
+          <input type="radio" value="CC" name="accounttype" id="paymentCC">
+        </div>
+        <div class="form-group col-xs-4">
+          <label class="control-label">Checking</label>
+          <input type="radio" value="C" name="accounttype" id="paymentC">
+        </div>
+        <div class="form-group col-xs-4">
+          <label class="control-label">Savings</label>
+          <input type="radio" value="S" name="accounttype" id="paymentS">
+        </div>
+      </div>
     </form>
 
-    <form class="CC form-horizontal" style="display:none;" role="form" id="CC-form" method="post">
-      <div class="form-group">
-        <label class="credit debit">Debit Card?</label>
-        <input type="checkbox" name="isdebitcardonly" id="cardType"> <!-- Type=CC -->
-      </div>
-      <div class="form-group">
-        <label>Name (exactly as it appears on card)</label>
-        <input type="text" name="name_on_card" value="Blank Blank"> <!-- Type=CC -->
-      </div>
-      <div class="row">
-        <div class="form-group col-xs-3">
-          <label>Address</label>
-          <input type="text" name="billingaddr1" id="billingAddress" value="Blank"> <!-- Type=CC -->
+    <div class="" id="transaction-CC-block" style="display:none;">
+      <div>Ok you want to donate: $<span class="amount"></span></div>
+      <form class="CC form-horizontal" role="form" id="CC-form" method="post">
+        <div class="form-group">
+          <label class="credit debit">Debit Card?</label>
+          <input type="checkbox" name="isdebitcardonly" id="cardType"> <!-- Type=CC -->
         </div>
-        <div class="form-group col-xs-3">
-          <label>City<label>
-          <input type="text" name="billingcity" value="Blank"> <!-- Type=CC -->
+        <div class="row">
+          <div class="form-group col-xs-4">
+            <label>Account Number</label>
+            <input type="text" name="accountnumber" value="4111111111111111"> <!-- Always -->
+          </div>
+          <div class="form-group col-xs-4">
+            <label>Expiration Month</label>
+            <input type="text" name="expmonth" value="12"> <!-- Type=CC -->
+          </div>
+          <div class="form-group col-xs-4">
+            <label>Expiration Year</label>
+            <input type="text" name="expyear" value="15"> <!-- Type=CC -->
+          </div>
         </div>
-        <div class="form-group col-xs-3">
-          <label>State</label>
-          <input type="text" name="billingstate" value="TX"> <!-- Type=CC -->
-        </div>
-        <div class="form-group col-xs-3">
-          <label>ZIP</label>
-          <input type="text" name="billingzip" value="78241"> <!-- Type=CC -->
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group col-xs-4">
-          <label>Expiration Month</label>
-          <input type="text" name="expmonth" value="12"> <!-- Type=CC -->
-        </div>
-        <div class="form-group col-xs-4">
-          <label>Expiration Year</label>
-          <input type="text" name="expyear" value="15"> <!-- Type=CC -->
-        </div>
-        <div class="form-group col-xs-4">
-          <label>Account Number</label>
-          <input type="text" name="accountnumber" value="4012000033330026"> <!-- Always -->
-        </div>
-      </div>
-      <button type="submit" id="submitCC">Donate</button>      
-    </form>
+        <button type="submit" id="submitCC">Donate: $<span class="amount"></span></button>
+      </form>
+    </div>
+
+    <div class="" id="transaction-confirm-block" style="display:none;">
+      <p> If the following is wrong please click the data to correct:</p>
+      <span id="confirm-data"></span>
+      <p>
+      Thank you for your generous contribution!  The people of SA thank you!
+      </p>
+      <p> For more advanced contributions (recurring) please visit: ...  </p>
+    </div>
 
     <form class="CS form-horizontal" style="display:none;" role="form" id="CS-form" method="post">
       <div class="form-group">
@@ -104,99 +187,13 @@ tags:
         <label for="cardType">Routing Number</label>
         <input type="text" name="routingnumber"> <!-- Type=C or Type=S -->
       </div>
-      <button type="submit" id="submitCS" >Donate</button>      
+      <button type="submit" id="submitCS" >Donate</button>
     </form>
-
-<script>
-$( "input[name=accounttype]" ).change(function() {
-  type = $( "input:radio[name=accounttype]:checked" ).val();
-  if(type == "CC") {
-    $( ".CC" ).css("display", "block");
-    $( ".CS" ).css("display", "none");
-  } else if(type == "C" || type == "S") {
-    $( ".CS" ).css("display", "block");
-    $( ".CC" ).css("display", "none");
-  }
-});
-
-//Set the global sessionid
-var sessionJSON = $.ajax({ url: 'http://sa-cdc.org/scripts/vanco/encrypt.php',
-    dataType: 'jsonp',
-    crossDomain: true,
-    success: function (data) {
-      sessionid = data['sessionid'];
-  }
-});
-
-$('#CC-form').submit(function(event) {
-
-    event.preventDefault(); //End the form submission event now!
-
-    //TODO: Acquire the sessionid through this same method in php!
-    var nvpvarJSON = $.ajax({
-      url: 'http://sa-cdc.org/scripts/vanco/transRed.php',
-      dataType: 'jsonp',
-      crossDomain: true,
-      success: function(data) {
-        var formSer = $( "#CC-form" ).serializeArray();
-        var json = {};
-    
-        jQuery.each(formSer, function() {
-          json[this.name] = this.value || '';
-        });
-        json["accounttype"] = "CC";
-        json["name"] = "Doe,John";
-        json['nvpvar'] = data['nvpvar'];
-        json['sessionid'] = sessionid;
-        //alert(JSON.stringify(json));
-
-        $.ajax({
-          type: "POST",
-          url: "https://www.vancodev.com/cgi-bin/wsnvptest.vps",
-          data: json,
-          dataType: 'jsonp',
-          crossDomain: true,
-          success: function (vancoData) {
-            alert(JSON.stringify(vancoData));
-          },
-          error: function (jqXHR, textStatus, errorThrown, data) {
-            alert(errorThrown);
-          }
-        });
-      },
-      error: function (jqXHR, textStatus, errorThrown, data) {
-        alert(errorThrown);
-      }
-    });
-    
-
-
-    });
-
-  $('#CS-form').submit(function() {
-    $.ajax({
-        type: "POST",
-        url: url,
-        data: { "sessionid":sessionid, "nvpvar":nvpvar, "accounttype":"CC", "accountnumber": ccno, "expmonth": 
-        mm, "expyear": yy, "email": email, "name": custname, "billingaddr1": custadd, "billingcity": custcity, 
-        "billingstate": custstate, "billingzip": custzip, "name_on_card": custname
-        },
-        dataType: 'jsonp',
-        async: true,
-        traditional: false,
-        success: function (data) {
-            alert(JSON.stringify(data));
-        },
-        error: function (jqXHR, textStatus, errorThrown, data) {
-            alert(errorThrown);
-        }
-    });
-});
-</script>
-
-    <p class="text-center">If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org</a>.  Or, you can click on the link below to make a donation on-line.  Your contributions are always appreciated!</p>
-
-    <a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">DONATE NOW</a>
-
-    <hr class="half-rule">
+  </div>
 </div>
+
+<p class="text-center">If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org</a>.  Or, you can click on the link below to make a donation on-line.  Your contributions are always appreciated!</p>
+
+<a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">DONATE NOW</a>
+
+<hr class="half-rule">
