Made changes per John 18 Jul

--- a/content/clinic_info/partners.html
+++ b/content/clinic_info/partners.html
@@ -62,4 +62,13 @@ tags:
               <h5>The mission of Alpha Home is to provide spiritually based substance abuse treatment and support to women and their families to prepare them to become more productive members of society.</h5></br></br>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <p class="text-center partner">
+        <a href="http://www.mhm.org/" target="_blank"><img class="partner img-responsive" src="/static/imgs/logos/MHM.png"></a>
+        </p>
+        <h3>Methodist Healthcare Ministries</h3>
+        <h5>Methodist Healthcare Ministries (MHM) is a private, faith-based, not-for-profit organization dedicated to providing medical, dental and health-related human services to low-income families and the uninsured in South Texas. The mission of the organization is "Serving Humanity to Honor God" by improving the physical, mental and spiritual health of those least served in the Southwest Texas Conference area of The United Methodist Church. MHM is one-half owner of the Methodist Healthcare System - the largest healthcare system in South Texas.</h5></br></br>
+      </div>
+    </div>
 </div>
