--- a/content/seek_care/sched_vst.html
+++ b/content/seek_care/sched_vst.html
@@ -10,7 +10,7 @@ tags:
     <h2 class="bs-docs-featurette-title">Schedule a Visit with Us</h2>
     <p class="lead">Important:  You must bring a photo ID with you when you visit our clinic for services.</p>
 
-    <hr class="half-rule">
+    <hr class="full-rule">
 
     <div class="row page">
 
@@ -23,7 +23,6 @@ tags:
         </p>
         <a href="tel://12102202300" class="btn btn-primary active" role="button">(210) 220-2300</a>
         <a href="mailto:estella@sachristiandental.org?Subject=Schedule%20a%20Visit" class="btn btn-primary active" role="button">Email SACDC</a>
-        <hr class="half-rule">
 	    </div>
     
       <div class="col-md-4">
@@ -35,7 +34,6 @@ tags:
           <a href="/clinic_info/downloads/Applicant_Handout.pdf" target="_blank" class="btn btn-primary active" role="button">Applicant Handout</a>
           <a href="/clinic_info/downloads/Applicant_Handout_Spanish.pdf" target="_blank" class="btn btn-primary active" role="button">Folleto Solicitante</a>
           <a href="/clinic_info/downloads/Clinic_Rules_2014.pdf" target="_blank" class="btn btn-primary active" role="button">Clinic Rules</a>
-          <hr class="half-rule">
 	    </div>
 	    <div class="col-md-4">
         <div class="text-center map-container bs-docs-featurette-img">
@@ -45,8 +43,8 @@ tags:
         <p class="">SACDC is located at 1 Haven for Hope Way Building 1, Suite 400, San Antonio, TX 78207. For directions please <a href="http://www.viainfo.net/" target="_blank">check with Via</a> or get <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank">directions through Google Maps</a>.</p>
         <a href="https://www.google.com/maps/place/1+Haven+for+Hope+Way/" target="_blank" class="btn btn-primary active" role="button">Map</a>
         <a href="http://www.viainfo.net/" target="_blank" class="btn btn-primary active" role="button">Via Transit</a>
-        <hr class="half-rule">
 	    </div>
     </div>
+    <hr class="full-rule">
   <!-- </div> -->
 </div>
