--- a/content/clinic_info/index.html
+++ b/content/clinic_info/index.html
@@ -20,35 +20,46 @@ tags:
   	      On average, roughly 4.5 million work days are missed each year in the United States because of chronic oral pain</br></br></h5>
       </div>
     </div>
+    <hr class="full-rule">
 
     <div class="row">
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic1_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
         <h3 class="text-center">The need is great</h3>
-        <h5 class="text-center">Access to dental care can be difficult or even impossible for those who do not have the financial resources to go to the dentist.  Minor dental problems become major if treatment is delayed.</h5></br>
-        <img src="/static/imgs/pic-content/pic2_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-        <h3 class="text-center">Why don't they receive care?</h3>
-        <h5 class="text-center">Some are homeless, some are single mothers, others are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</h5></br>
+        <h5 class="text-center">Access to dental care can be difficult or even impossible for those who do not have the financial resources to go to the dentist.  Minor dental problems become major if treatment is delayed.</h5>
       </div>
 
       <div class="col-md-4">
         <img src="/static/imgs/pic-content/pic4_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
         <h3 class="text-center">Acute Need for the Elderly</h3>
-        <h5 class="text-center">Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</h5></br>
-        <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-        <h3 class="text-center">SACDC Offers Access to Dental Care</h3>
-        <h5 class="text-center">The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h5></br>
+        <h5 class="text-center">Hundreds of low-income elderly and disabled persons live below the poverty level in San Antonio and Bexar County, and most have no dental insurance.  Dental benefits are usually not available for seniors in Medicaid programs.</h5>
       </div>
 
-    <div class="col-md-4">
-       <img src="/static/imgs/pic-content/pic5_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+      <div class="col-md-4">
+        <img src="/static/imgs/pic-content/pic5_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
         <h3 class="text-center">Haven for Hope Partnership</h3>
-        <h5 class="text-center">In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residence.  The clinic includes 12 dental treatment rooms and 4 surgery suites.</h5></br>
-        <img src="/static/imgs/pic-content/pic6_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
-        <h3 class="text-center">UTHSCSA Dental School Collaboration</h3>
-        <h5 class="text-center">The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</h5></br>
+        <h5 class="text-center">In addition to caring for our community's low-income residents, SACDC provides dental care for the Haven for Hope homeless residence.  The clinic includes 12 dental treatment rooms and 4 surgery suites.</h5>
       </div>
     </div>
-     
+    <hr class="full-rule">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="/static/imgs/pic-content/pic2_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <h3 class="text-center">Why don't they receive care?</h3>
+        <h5 class="text-center">Some are homeless, some are single mothers, others  are unemployed, some work yet remain in poverty, others may be recovering from substance abuse, many are elderly or disabled.</h5>
+      </div>
+      <div class="col-md-4">
+        <img src="/static/imgs/pic-content/pic9_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+        <h3 class="text-center">SACDC Offers Access to Dental Care</h3>
+        <h5 class="text-center">The clinic provides a wide range of dental services for indigent and homeless persons in San Antonio and Bexar County.  SACDC is unique in the area as the only agency providing free dental care through volunteers.</h5>
+      </div>
+      <div class="col-md-4">
+        <img src="/static/imgs/pic-content/pic6_480.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive">
+          <h3 class="text-center">UTHSCSA Dental School Collaboration</h3>
+          <h5 class="text-center">The University of Texas Health Science Center-SA Dental School 4th year dental students provide general dental care and Advanced Education in General Dentistry residents provide specialized treatment under the supervision of dental school faculty during a weekly rotation.</h5>
+      </div>
+    </div>
+    <hr class="full-rule">
+    
     <h6 class="text-center"><i>SACDC is a 501(c)3 non-profit organization providing charitable dental care for indigent persons in keeping with Christian ministry</i></h6>
 </div>
