--- a/content/get_involved/index.html
+++ b/content/get_involved/index.html
@@ -10,7 +10,7 @@ tags:
     <h2 class="bs-docs-featurette-title">Get Involved.</h2>
     <p class="lead">Want to help the community? We need volunteers.</p>
 
-    <hr class="half-rule">
+    <hr class="full-rule">
 
     <div class="row page">
       <div class="col-md-4">
@@ -33,18 +33,15 @@ tags:
         <p>Questions? Call <a href="tel://12102202301">(210) 220-2301</a> for more information.</p>
       </div>
     </div>
-
+    <hr class="full-rule">
     <div class="row page">
 		  <div class="col-md-4">
-        <hr class="half-rule">
         <p><em>"The fingerprints of God, I see those fingerprints in all of you. And may God Bless this clinic with all its needs. Thank you all for the difference you make in people’s lives. There are no words except God bless you."</em></p>
 			</div>
 		  <div class="col-md-4">
-        <hr class="half-rule">
         <p><em>"I just want to thank all of the staff and volunteers of the Christian Dental Clinic. I want to let you all know that you are making a difference and doing a very good job. As a former homeless and recovery citizen of this city, I find myself so grateful today. I have my smile and self-esteem back thanks to you all."</em></p>
 			</div>
 		  <div class="col-md-4">
-        <hr class="half-rule">
         <p><em>"The staff and volunteers of the Christian Dental clinic have given me my smile back and have made me feel like I have been reborn. Now I can smile and not feel ashamed of my teeth. I am just so very grateful that there is a place people can go to get their teeth fixed for little or nothing at all. The clinic has changed my life and the lives of many others over the years."</em></p>
 			</div>
     </div>
