Formatting donation form.

--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -70,22 +70,22 @@ tags:
           </ul>
 
           <h3> Select an amount to donate. </h3>
-          <ol>
-            <li class="donation"><button type="submit"
+          <ol class="donation">
+            <li><button type="submit"
               value="10">$10</button></li>
-            <li class="donation"><button type="submit"
+            <li><button type="submit"
               value="25">$25</button></li>
-            <li class="donation"><button type="submit"
+            <li><button type="submit"
               value="100">$100</button></li>
-            <li class="donation"><button type="submit"
+            <li><button type="submit"
               value="1000">$1K</button></li>
-            <li class="donation"><button type="submit"
+            <li><button type="submit"
               value="2500">$2.5K</button></li>
-            <li class="donation"><button type="submit"
+            <li><button type="submit"
               value="10000">$10K</button></li>
-            <li class="donation"><button type="submit"
+            <li><button type="submit"
               value="1000000">$1M</button></li>
-            <li class="donation"><input type="text" name="enteredAmount"
+            <li><input type="text" name="enteredAmount"
             id="enteredAmount" placeholder="Custom"></li>
           </ol>
 
