Made changes per John 24 July

--- a/content/why_oral.html
+++ b/content/why_oral.html
@@ -16,7 +16,7 @@ tags:
     </div>
     <br>
     <div class="col-md-4">
-      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral1_480.png" alt="A" width="480px">
+      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral4.png" alt="A" width="480px">
     </div>
   </div>
   <hr class="full-rule">
@@ -43,19 +43,25 @@ tags:
   </div>
   <hr class="full-rule">
   <div class="row ltrtpadding">
-    <div class="col-md-4">
-      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral4.png" alt="A" width="480px">
+    <div class="col-md-3">
+      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/tooth.png" alt="A" width="172px">
+      <h3 class="text-center">Point in Time</h3>
+      <h5 class="text-center">Dental care was cited as THE HIGHEST NEED by San Antonio's homeless in the 2014 Point in Time annual survey and statewide, only 1/7 of those who needed dental care, received it.</br></br></h5>
     </div>
-    <!--<br>-->
-    <div class="col-md-8">
-      <h3 class="story">Need:</h3></br>
-        <h4>Dental care was cited as THE HIGHEST NEED  by San Antonio’s homeless in the 2014 Point in Time annual survey and statewide, only 1/7 of those who needed dental care, received it. Compare this with Medical care in which the disparity between need and access is roughly ½.</h4>
+    <div class="col-md-3">
+      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/471.png" alt="A" width="172px">
+      <h3 class="text-center">Lost Work</h3>
+      <h5 class="text-center">Each year, roughly 471 years of work are lost in San Antonio alone due to untreated dental disease.</br></br></h5>
+    </div>
+    <div class="col-md-3">
+      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/peeps.png" alt="A" width="172px">
+      <h3 class="text-center">Untreated Needs</h3>
+      <h5 class="text-center">From minor signs of decay to missing teath, dental decay has huge potential for preventing, seeking and/or maintaing work.  The Kaiser Foundation reports that about 1 in 4 non-elderly adults have untreated tooth decay.</br></br></h5>
+    </div>
+    <div class="col-md-3">
+      <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/states.png" alt="A" width="172px">
+      <h3 class="text-center">Chronic Costs</h3>
+      <h5 class="text-center">According to the Surgeon General, an estimated 164 million collective work hours are lost each year due to preventable dental disease.</br></br></h5>
     </div>
   </div>
-  <hr class="full-rule">
-  <div class="row">
-    <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/why_oral6.png" alt="A" width="800px">
-  </div>
-  <hr class="full-rule">
-    
 </div>
